Enable -frename-registers at -O2.

PR rtl-optimization/57193
	* opts.c (default_options_table): Add OPT_frename_registers at -O2
	and above.
	* doc/invoke.texi (-frename-registers, -O2): Update documentation.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@235442 138bc75d-0d04-0410-961f-82ee72b054a4